--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "build": "vite build --base=/DreamTeam/",
     "preview": "vite preview"
   },
+  "devDependencies": {
+  "glob": "^11.0.0",
+  "postcss": "^8.4.41",
+  "postcss-sort-media-queries": "^5.2.0",
+  "vite": "^5.4.6"
+},
+
   "dependencies": {
     "axios": "^1.13.2",
     "accordion-js": "^3.4.1",
