--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.13.2",
     "izitoast": "^1.4.0",
     "modern-normalize": "^3.0.1",
+    "raty-js": "^4.3.0",
+    "swiper": "^12.0.3",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
